--- a/src/Login.css
+++ b/src/Login.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@700&display=swap');
 .gradiente{
     background: linear-gradient(180deg, #E73539 0%, rgba(213, 43, 30, 0.00) 100%);
     width: 911px;
     height: 156px;  ;
 }
 .casaCactus{
-    width: 911px;
-    height: 982px;
-    flex-shrink: 0;
-    border-radius: 24px 0px 0px 24px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    /* flex-shrink: 0; */
+    /* border-radius: 24px 0px 0px 24px; */
     background: #F8F0F0;
 }
 .text{
@@ -17,26 +19,29 @@
     justify-content: space-between;
 }
 .tituloLogin{
-    color: #000;
-    font-family: Saira Condensed;
-    font-size: 20px;
+    font-family: 'Saira Condensed', sans-serif;
+    color: black;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%; /* 55px */
+    text-transform: uppercase;
 }
+
 .cosaslogin{
-color: rgba(26, 23, 23, 0.38);
-font-family: Inter;
-font-size: 24px;
-display: flex;
-flex-direction: column;
-flex-wrap: wrap;
-align-content: center;
-justify-content: flex-end;
+    color: rgba(26, 23, 23, 0.38);
+    font-family: Inter;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* justify-content: flex-end; */
 }
 .botonlogin{
 display: flex;
 flex-wrap: nowrap;
 justify-content: center;
 font-size: 30px;
-border-radius: 40px;
 }
 .xd{
     width: 465px;
@@ -45,6 +50,7 @@ border-radius: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 40px;
 }
 .sesioneslogin{
     color: rgba(26, 23, 23, 0.38);
@@ -54,4 +60,21 @@ border-radius: 40px;
 .rojologin{
     color: #E73539;
     margin-bottom: 10px;
+}
+.input-name, .pass {
+    background-color: transparent; /* Esto hace que el fondo sea transparente */
+    border: none;
+    border-bottom: 1px solid rgb(173, 169, 169);
+    color: #7c7b7b;
+    margin-left: 20px;
+}
+.input-name:focus, .pass:focus {
+    outline: none;
+}
+.input-name::placeholder, .pass::placeholder {
+    color:rgb(173, 169, 169);
+}
+
+.input-name{
+    margin-left: 50px;
 }
