--- a/src/Register.css
+++ b/src/Register.css
@@ -4,10 +4,9 @@
     height: 156px;  ;
 }
 .casaCactus{
-    width: 911px;
-    height: 982px;
-    flex-shrink: 0;
-    border-radius: 24px 0px 0px 24px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
     background: #F8F0F0;
 }
 .text{
@@ -54,4 +53,12 @@ border-radius: 40px;
 .rojologin{
     color: #E73539;
     margin-bottom: 10px;
+}
+.boton-inicio{
+    background: none; 
+    border: none;
+    padding: 0; 
+    font: inherit;
+    cursor: pointer; 
+    color: inherit;
 }
