--- a/src/Home.css
+++ b/src/Home.css
@@ -1,13 +1,15 @@
+#root{
+    margin: 0%;
+}
 .navbar{
-    background-color: rgba(0, 0, 0, 0.499);
     position: sticky;
-    top: 0;
-    right: 0;
-    padding: 10px;
-    padding-left: 80%;
-  
-    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background: chartreuse;
 }
 .navbar button {
-    margin-left: 10px; 
+    display: block;
+    text-decoration: none;
   }
