--- a/src/Home.css
+++ b/src/Home.css
@@ -1,16 +1,50 @@
+body{
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-direction: row;
+    height: 100vh;
+}
 #root{
     margin: 0%;
+    display: flex;
+    flex: 1;
+}
+.HomeBar{
+    display: flex;
+    flex: 1;
+    background-color: #202020;
+}
+.TopHomeBar{
+    background-color: #272727;
+    height: 12%;
+    width: 80%;
+    border-bottom: 5px solid white;
+    border-left: 5px solid white;
+    border-right: 5px solid white;
 }
 .navbar{
-    position: sticky;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+   width: 20%;
+  background-color: #272727;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start; 
+  border-right: 5px solid white;
 }
 .navbar button {
     display: block;
     text-decoration: none;
     border-radius: 5px;
-    margin: 5px 10px;
+    margin: 20px 10px;
+    width: calc(100% - 20px);
+  }
+  .navbar h1{
+    color: white;
+    font-size: 30px;
+    margin: 40px 0px;
+  }
+  .navbar span{
+    color: red;
   }
