--- a/src/Login.css
+++ b/src/Login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@700&display=swap');
 .gradiente{
     background: linear-gradient(180deg, #E73539 0%, rgba(213, 43, 30, 0.00) 100%);
-    width: 911px;
+    width: 100%;
     height: 156px;  ;
 }
 .casaCactus{
