--- a/src/Modulos/Casilleros.css
+++ b/src/Modulos/Casilleros.css
@@ -2,28 +2,24 @@
     display: flex;
     flex-direction: column;
     background-color: black;
+    width: 100%;
+    height: 100%;
 }
 
 .textmodulos{
 color: wheat;
-
 font-family: HelveticaNeueCyr;
 font-style: normal;
 font-weight: 400;
 line-height: 77%;
 }
-.estrella {
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin: 20px;
-    border-right: 20px solid transparent;
-    border-bottom: 40px solid #fecd00;
-    border-left: 20px solid transparent;
-    position: relative;
-  }
+
 .lineanegra{
     width: 100%;
   height: 2px; 
   background-color:wheat ; 
+}
+.fotomodulos img{
+  width: 500px;
+  height: 300px;
 }
