--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -11,23 +11,12 @@
   }
 .navbar{
     background-color: rgba(0, 0, 0, 0.499);
-    position: sticky;
-    top: 0;
-    right: 0;
-    padding: 10px;
-    padding-left: 80%;
     /* position: relative; */
-    justify-content: center;
-    align-items: flex-start;
-    
     
 }
 .navbar button {
+  margin-left: 5%;
   
-  justify-content: center;
-  align-items: flex-start;
-  
-   
   }
 
   
@@ -49,4 +38,24 @@
   }
   .boton-register{
     background-color: #FF3E33;
+    
   }
+
+  
+  @media only screen and (min-width: 200px) and (max-width: 1600px) {
+    
+      .navbar {
+        padding-right: 10px; /* Ajusta el padding de la barra de navegación para pantallas más pequeñas */
+        display: flex;
+        flex-direction: column;
+       align-items: flex-end;
+      }
+    
+      .logo {
+        width: 90px !important; /* Ajusta el tamaño del logo para pantallas más pequeñas */
+        height: 70px !important;
+      }
+    
+    
+  }
+  
