--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -1,44 +1,60 @@
 .full-screen {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    overflow: auto;
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: auto;
+}
 .navbar{
-    background-color: rgba(0, 0, 0, 0.499);
-    position: sticky;
-    top: 0;
-    right: 0;
-    padding: 10px;
-    padding-left: 80%;
-    /* position: relative; */
+  background-color: rgba(0, 0, 0, 0.499);
+  /* position: relative; */
+  
 }
 .navbar button {
-    margin-left: 10px; 
-  }
+margin-left: 5%;
 
-  
+}
+
+
 .imagen img {
-    width: 100%;
-    object-fit: cover;
+  width: 100%;
+  object-fit: cover;
 }
 .logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 80px !important;
-    height: 40px !important;
-    margin-top: 0%;
-    /* otros estilos */
-  }
-  .button{
-    background-color: brown;
-  }
-  .boton-register{
-    background-color: #FF3E33;
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80px !important;
+  height: 20px !important;
+  margin-top: 0% !important;
+  /* otros estilos */
+}
+.button{
+  background-color: brown;
+}
+.boton-register{
+  background-color: #FF3E33;
+  
+}
+
+
+@media only screen and (min-width: 200px) and (max-width: 1600px) {
+  
+    .navbar {
+      padding-right: 10px; /* Ajusta el padding de la barra de navegación para pantallas más pequeñas */
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+    }
+  
+    .logo {
+      width: 90px !important; /* Ajusta el tamaño del logo para pantallas más pequeñas */
+      height: 40px !important;
+    }
+  
+  
+}
