--- a/src/Login.css
+++ b/src/Login.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 .gradiente{
     background: linear-gradient(180deg, #E73539 0%, rgba(213, 43, 30, 0.00) 100%);
     width: 911px;
@@ -10,7 +11,7 @@
     object-fit: cover;
     /* flex-shrink: 0; */
     /* border-radius: 24px 0px 0px 24px; */
-    background: #F8F0F0;
+    background: #252525;
 }
 .text{
     display: flex;
@@ -20,8 +21,9 @@
 }
 .tituloLogin{
     font-family: 'Saira Condensed', sans-serif;
-    color: black;
-    font-size: 30px;
+    color: rgb(254, 254, 254);
+    margin-bottom: 10%;
+    font-size: 16px;
     font-style: normal;
     font-weight: 700;
     line-height: 110%; /* 55px */
@@ -35,17 +37,24 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin-bottom: 100px;
     /* justify-content: flex-end; */
 }
 .botonlogin{
-display: flex;
-flex-wrap: nowrap;
-justify-content: center;
-font-size: 30px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    font-size: 30px;
+    font-family: 'Saira Condensed', sans-serif;
+    color: rgb(254, 254, 254);
+    font-style: normal;
+    font-weight: 700;
+
 }
 .xd{
-    width: 465px;
-    height: 79px;
+    width: 300px;
+    height: 50px;
+    margin-bottom: 10px;
     background-color: #E73539;
     display: flex;
     align-items: center;
@@ -65,16 +74,32 @@ font-size: 30px;
     background-color: transparent; /* Esto hace que el fondo sea transparente */
     border: none;
     border-bottom: 1px solid rgb(173, 169, 169);
-    color: #7c7b7b;
+    color: #e5e1e1;
+    font-size: 20px;
     margin-left: 20px;
 }
 .input-name:focus, .pass:focus {
     outline: none;
 }
-.input-name::placeholder, .pass::placeholder {
+.input-name::placeholder, .pass::placeholder, .corre-campo {
     color:rgb(173, 169, 169);
 }
 
 .input-name{
     margin-left: 50px;
+}
+.nombre, .contrasena, .correo-electronico{
+    margin-bottom: 30px;
+    color: rgba(255, 255, 255, 0.827);
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+}
+.page-registro{
+    background: none; 
+    border: none;
+    padding: 0; 
+    font: inherit;
+    cursor: pointer; 
+    color: #E73539;
 }
